<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtEdad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/edad"
    tools:context=".PrincipalActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarPrincipalActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main_menu"
        app:title="@string/cuestionario"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/datos"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarPrincipalActivity" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/edad"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/numEdad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numEdad" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/spGenero"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/spGenero" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provincia"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerProvincias"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/spinnerProvincias" />

    <Spinner
        android:id="@+id/spinnerProvincias"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:entries="@array/provincias"
        app:layout_constraintStart_toStartOf="@+id/spGenero"
        app:layout_constraintTop_toBottomOf="@+id/spGenero" />

    <Spinner
        android:id="@+id/spGenero"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:entries="@array/generos"
        app:layout_constraintStart_toStartOf="@+id/numEdad"
        app:layout_constraintTop_toBottomOf="@+id/numEdad" />

    <EditText
        android:id="@+id/numEdad"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>